Issue #3: first pass at showing filename. Problem: needs to wrap.

--- a/src/static/index.css
+++ b/src/static/index.css
@@ -119,6 +119,11 @@ input[type=number]{
     overflow-y: auto;
 }
 
+.outer_pills {
+    display: flex;
+    flex-direction: column;
+}
+    
 .row {
     display: flex;
     max-width: 99%;
